<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, Main!</string>
	<string name="app_name">Rhizome Retriever</string>
	<!-- For the menu -->
	<string name="m_import">Import</string>
	<string name="m_new_keys">KeyGen</string>
	<string name="m_reinit_list">Reinit. excl. list</string>
	<!-- For the context menu -->
	<string name="cm_export">Export</string>
	<string name="cm_delete">Delete</string>
	<string name="cm_mark">Mark for expiration</string>
	<string name="cm_vcert">View Manifest</string>
	<!-- For the picker -->
	<string name="pick_file">Pick File</string>
	<string name="pick_folder">Pick Folder</string>
	<!-- For the manifest editor -->
	<string name="me_fill">Complete the manifest</string>
	<string name="me_validate_fill">Publish the manifest</string>
	<string name="me_author_fill">Author:</string>
	<string name="me_version_fill">Version:</string>
	<string name="me_name">Create the manifest</string>
	<!-- For the manifest viewer -->
	<string name="mv_name_p">File name: </string>
	<string name="mv_size_p">Size:</string>
	<string name="mv_author_p">Author:</string>
	<string name="mv_date_p">Creation ts:</string>
	<string name="mv_version_p">Version:</string>
	<string name="mv_hash_p">Hash:</string>
	<string name="mv_hash_ok_p">Hash ok?</string>
	<string name="mv_sign_ok_p">Cert sign?</string>
	<string name="mv_back">Back</string>
	<string name="mv_name">View the manifest</string>
	
</resources>
