<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:id="@+id/tableLayout1"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	
	<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TextView android:text="@string/mv_name_p" android:id="@+id/textView1"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<TextView android:text="" android:id="@+id/mv_name"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	</TableRow>
	
	<TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TextView android:text="@string/mv_author_p" android:id="@+id/textView3"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<TextView android:text="" android:id="@+id/mv_author"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	</TableRow>
	
	<TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TextView android:text="@string/mv_version_p" android:id="@+id/textView4"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<TextView android:text="" android:id="@+id/mv_version"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TextView android:text="@string/mv_date_p" android:id="@+id/textView3"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<TextView android:text="" android:id="@+id/mv_date"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow5" android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TextView android:text="@string/mv_size_p" android:id="@+id/textView3"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<TextView android:text="" android:id="@+id/mv_size"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	</TableRow>
	<TableRow android:id="@+id/tableRow6" android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TextView android:text="@string/mv_hash_p" android:id="@+id/textView3"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<TextView android:text="" android:id="@+id/mv_hash"
			android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	</TableRow>
	<Button android:text="@string/mv_back" android:id="@+id/mv_back" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
</TableLayout>

